--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,6 +49,7 @@ install:
   - set PATH=c:\msys64\mingw32\bin;%PATH%
   - g++ --version
   - set PATH=c:\Python27-x64;%PATH%
+  - set PYTHON_INTERPRETER=c:\Python27-x64\python.exe
   - python --version
   - echo %ROOT_DIRECTORY%
   - cd %BOOST_BUILD_PATH%
