--- a/appveyor.yml
+++ b/appveyor.yml
@@ -93,7 +93,7 @@ build_script:
   - mkdir build && cd build
   - if defined cmake (
     cmake -DCMAKE_CXX_STANDARD=11 -Dbuild_tests=ON -Dbuild_examples=ON -Dbuild_tools=ON -Dpython-bindings=%python% -Dboost-python-module-name="python" -Dskip-python-runtime-test=true -DPython_ADDITIONAL_VERSIONS="2.7" -G "Visual Studio 15 2017 Win64" .. &&
-    cmake --build . --config Release -- -verbosity:minimal
+    cmake --build . --config Release --parallel %NUMBER_OF_PROCESSORS% -- -verbosity:minimal
     )
 
 test_script:
